fix content wrapping bug with projects over contact, profile over about sections when in landscape mode for mobile devices

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,10 +1,15 @@
 @media screen and (max-width: 1400px) {
 	#profile {
 		height: 83vh;
-		margin-bottom: 6rem;
+		margin-bottom: 20rem;
 	}
 	.about-containers {
 		flex-wrap: wrap;	
+	}
+	#about,
+	#contact,
+	#projects {
+		height: fit-content;
 	}
 }
 
